# deespee

./: .env.example  .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  docker-compose.yml
.cloudbuild/: deploy-to-prod.yaml  pr_checks.yaml  staging.yaml
adexchange/: go.mod  main.go
adexchange/proto/: messages.pb.go
agents/: GEMINI.md  Makefile  README.md  pyproject.toml
agents/.cloudbuild/: pr_checks.yaml  staging.yaml
agents/app/: agent.py  fast_api_app.py
agents/app/app_utils/: telemetry.py  typing.py
agents/app/proto/: messages_pb2.py
agents/deployment/terraform/: build_triggers.tf  variables.tf
agents/notebooks/: adk_a2a_app_testing.ipynb
crates/adexchange/: Cargo.toml
crates/adexchange/src/: main.rs
crates/analytics/: Cargo.toml
crates/analytics/src/: main.rs  models.rs  reader.rs
crates/analytics/src/handlers/: query.rs
crates/collector/: Cargo.toml
crates/collector/src/: main.rs  state.rs  verification.rs
crates/collector/src/handlers/: events.rs
crates/dmp/: Cargo.toml
crates/dmp/src/: main.rs  state.rs
crates/dmp/src/handlers/: campaigns.rs  events.rs  mod.rs  segments.rs
crates/dsp/: Cargo.toml
crates/dsp/src/: main.rs  models.rs  render.rs
crates/dsp/src/clients/: dmp.rs
crates/dsp/src/engine/: bidding.rs  mod.rs  pacing.rs
crates/dsp/src/handlers/: bid.rs  mod.rs  pubsub.rs
crates/dwh/: Cargo.toml
crates/dwh/src/: main.rs  models.rs  storage.rs
crates/dwh/src/handlers/: ingest.rs  query.rs
crates/proto/: Cargo.toml  build.rs
crates/proto/src/: lib.rs
deployment/terraform/: build_triggers.tf  github.tf  pubsub.tf  variables.tf
deployment/terraform/dev/: variables.tf
deployment/terraform/dev/vars/: env.tfvars  env.tfvars.example
deployment/terraform/vars/: env.tfvars
dmp/: Cargo.toml
dsp/: Cargo.toml  build.rs
dsp/src/: main.rs
shared/schemas/: messages.proto
