[workspace]
resolver = "2"
members = [
    "crates/dsp",
    "crates/dmp",
    "crates/proto",
]

[workspace.dependencies]
axum = "=0.7.5"
tokio = { version = "=1.37.0", features = ["full"] }
prost = "=0.13.4"
serde = { version = "=1.0.197", features = ["derive"] }
serde_json = "=1.0.114"
anyhow = "=1.0.81"
tracing = "=0.1.40"
tracing-subscriber = "=0.3.18"
base64 = "=0.22.1"
indexmap = "=2.2.6"
prost-build = "=0.13.4"
