[workspace]
resolver = "2"
members = [
    "crates/dsp",
    "crates/dmp",
    "crates/proto",
    "crates/adexchange", "crates/collector", "crates/dwh",
]

[workspace.dependencies]
axum = "=0.7.5"
tokio = { version = "=1.52.1", features = ["full"] }
prost = "=0.13.4"
serde = { version = "=1.0.220", features = ["derive"] }
serde_json = "=1.0.140"
anyhow = "=1.0.81"
tracing = "=0.1.40"
tracing-subscriber = "=0.3.18"
base64 = "=0.22.1"
indexmap = "=2.14.0"
prost-build = "=0.13.4"
reqwest = { version = "0.12", features = ["json"] }
datafusion = "=53.1.0"
arrow = "=58.0.0"
arrow-json = "=58.0.0"
parquet = "=58.0.0"

# Pinned versions for Rust 1.84.1 compatibility
icu_collections = "=1.5.0"
icu_locid = "=1.5.0"
icu_locid_transform = "=1.5.0"
icu_normalizer = "=1.5.0"
icu_properties = "=1.5.0"
icu_provider = "=1.5.0"
idna = "=0.5.0"
idna_adapter = "=1.2.0"
litemap = "=0.7.3"
tinystr = "=0.7.6"
writeable = "=0.5.5"
zerovec = "=0.10.2"
yoke = "=0.7.4"
zerofrom = "=0.1.4"
cpufeatures = "=0.2.17"
chrono = "=0.4.38"
