[package]
name = "dsp"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
prost = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
google-cloud-pubsub = "0.26"
google-cloud-gax = "0.20"
base64 = "0.22"

[build-dependencies]
prost-build = "0.13"
