[package]
name = "analytics"
version = "0.1.0"
edition = "2021"

[dependencies]
# Standard Arrow & Parquet (Core Lakehouse)
# We use versions that are extremely stable and don't pull heavy transitive dependencies
arrow = "=52.2.0"
parquet = "=52.2.0"

# Query & API
axum.workspace = true

# Workspace dependencies
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
deespee-proto = { path = "../proto" }
prost.workspace = true
uuid = { version = "1.8", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
