[package]
name = "analytics"
version = "0.1.0"
edition = "2021"

[dependencies]
# Standard Arrow & Parquet (Core Lakehouse)
arrow.workspace = true
arrow-json.workspace = true
parquet.workspace = true
datafusion.workspace = true

# Query & API
axum.workspace = true

# Workspace dependencies
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
deespee-proto = { path = "../proto" }
prost.workspace = true
uuid = { version = "1.8", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
