[package]
name = "collector"
version = "0.1.0"
edition = "2021"

[dependencies]
axum.workspace = true
tokio.workspace = true
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
deespee-proto = { path = "../proto" }
uuid = { version = "1.8", features = ["v4"] }
base64.workspace = true
